--- a/SEIR_MH_NB.html
+++ b/SEIR_MH_NB.html
@@ -1753,7 +1753,7 @@ Opt$message</code></pre>
 Opt_par</code></pre>
 <pre><code>##      beta     kappa     gamma 
 ## 1.0000000 0.2959461 0.4597428</code></pre>
-<p>Let’s use this model to predict the cumulative infected cases until 25th April.</p>
+<p>The basic reeproduction number R0=β/γ=2.17. Let’s use this model to predict the cumulative infected cases until 25th April.</p>
 <pre class="r"><code>t &lt;- 1:as.integer(dmy(&quot;25-Apr-20&quot;) - dmy(&quot;14-Mar-20&quot;))
 fitted_cumulative_incidence &lt;- data.frame(ode(y = init, times = t, func = SEIR, parms = Opt_par))
 
